--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
+:root {
+  --black: #1c1e22;
+  --yellow: #ffe300;
+}
+*,
+*::before,
+*::after {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  box-sizing: inherit;
+}
+html {
+  font-size: 10px;
+}
+body {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-transform: capitalize;
+  background-color: var(--black);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  width: 100%;
+  max-width: 120rem;
+  height: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 2rem;
+}
+.title {
+  color: var(--yellow);
+  text-align: center;
+  margin-bottom: 1.5rem;
+  font-size: 3rem;
+}
+.subtitle {
+  color: #fff;
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+}
+.loading {
+  display: flex;
+  justify-content: center;
+  font-size: 5rem;
+  color: var(--yellow);
+}
+.navbar {
+  margin-bottom: 2rem;
+}
+.btns-group {
+  margin-bottom: 2rem;
+}
+.mr-2 {
+  margin-right: 2rem;
+}
+.btn {
+  border-radius: 3px;
+  padding: 1rem 2rem;
+  outline: none;
+  box-shadow: 0 0 1rem 0 rgba(255, 255, 255, 0.15);
+  color: #fff;
+  border: 2px solid #fff;
+  font-size: 1.6rem;
+  background-color: transparent;
+  transition-property: color, background-color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+}
+.btn:disabled {
+  cursor: not-allowed !important;
+}
+.btn:hover {
+  cursor: pointer;
+  background-color: #fff;
+  color: var(--black);
+}
+.btn:focus {
+  box-shadow: 0 2px 1rem 0 rgba(255, 255, 255, 0.5);
+}
+.index {
+  margin: 0 1rem;
+  font-size: 1.6rem;
+  color: var(--yellow);
+}
+.card {
+  margin-bottom: 2rem;
+  background-color: #000;
+  color: grey;
+  padding: 1rem 1.5rem;
+  border-radius: 1rem;
+}
+.card__title {
+  color: var(--yellow);
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+.card__subtitle {
+  font-size: 1.4rem;
+}
+.card__subtitle:nth-child(1) {
+  margin-bottom: 1rem;
 }
